# ipcpp

./: CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  optional_benchmark.cpp  shm_notify_benchmark.cpp  shm_pub_sub_benchmark.cpp  shm_rt_pub_sub_benchmark.cpp
documentation/: project_structure.md  terms_and_notations.md
examples/: CMakeLists.txt  domain_socket_notifier.cpp  domain_socket_observer.cpp  main.cpp  mem_latency.cpp  message.h  publisher.cpp  shared_allocator_example.cpp  shm.cpp  shm_broadcast_client.cpp  shm_broadcaster.cpp  shm_list_allocator.cpp  shm_polling_notifier.cpp  shm_polling_observer.cpp  shm_publisher.cpp  shm_subscriber.cpp  subscriber.cpp
include/ipcpp/: ipcpp.h  notification.h  service.h  service_shm.h  topic.h  types.h
include/ipcpp/config/: config.h
include/ipcpp/container/: alloc_traits.h  allocator.h  concepts.h  ipcpp_iterator.h  vector.h
include/ipcpp/container/fixed_size/: basic_string.h
include/ipcpp/datatypes/: concepts.h  fixed_size_stack.h  ipcpp_iterator.h  vector.h
include/ipcpp/datatypes/fixed_size/: basic_string.h  container_base.h
include/ipcpp/event/: README.md  domain_socket_notifier.h  domain_socket_observer.h  error.h  factory.h  notification.h  notifier.h  observer.h  options.h  shm_atomic_notifier.h  shm_atomic_observer.h  shm_notification_memory_layout.h  shm_polling_notifier.h  shm_polling_observer.h
include/ipcpp/memory/: allocator_traits.h  list_allocator.h  sanitizer.h
include/ipcpp/notification/: domain_socket_notifier.h  domain_socket_observer.h  notification.h  notification_handler.h  notifier.h  notifier_old.h  observer.h
include/ipcpp/pipe/: README.md  factory.h  reader.h  shared_queue.h  writer.h
include/ipcpp/publish_subscribe/: README.md  _message_buffer.h  broadcast_publisher.h  broadcast_subscriber.h  config.h  data_container.h  error.h  error_codes.h  fifo_message.h  fifo_message_queue.h  fifo_publisher.h  fifo_subscriber.h  message.h  message_buffer.h  message_buffer_mpmc.h  notification.h  options.h  publisher.h  real_time_message.h  real_time_publisher.h  real_time_shm_layout.h  real_time_subscriber.h  rt_shm_layout.h  service.h  subscriber.h  subscription_respons.h  tags.h  types.h  unique_publisher.h
include/ipcpp/publish_subscribe/fifo_seq/: fifo_message_queue.h  fifo_subscriber.h
include/ipcpp/publish_subscribe/real_time/: error_codes.h  real_time_memory_layout.h  real_time_message.h  real_time_publisher.h  real_time_subscriber.h  rt_shm_layout.h
include/ipcpp/publisher/: notifier.h  publisher.h
include/ipcpp/request_response/: README.md  requester.h  responder.h
include/ipcpp/shm/: address_space.h  allocator.h  chunk_allocator.h  data_view.h  dynamic_allocator.h  error.h  factory.h  mapped_memory.h  memory_block.h  notification.h  publisher.h  queue.h  ring_buffer.h  shared_memory_file.h  subscriber.h  synchronized_data.h
include/ipcpp/shm/datatypes/: list.h
include/ipcpp/shm/internal/unix/: mapped_memory.impl.h
include/ipcpp/sock/: error.h  tcp.h  udp.h
include/ipcpp/stl/: alloc_traits.h  allocator.h  basic_string.h  concepts.h  enqueue.h  fixed_size_queue.h  fixed_size_stack.h  forward_list.h  ipcpp_iterator.h  list.h  map.h  optional.h  set.h  string.h  unordered_map.h  unordered_set.h  vector.h
include/ipcpp/subscriber/: notification_handler.h  subscriber.h
include/ipcpp/utils/: access_wrapper.h  atomic.h  concepts.h  file_lock.h  io.h  ip_lock.h  linked_list.h  logging.h  mutex.h  numeric.h  platform.h  reference_counted.h  string_identifier.h  synced.h  synchronized.h  system.h  utils.h
src/: CMakeLists.txt  topic.cpp  types.cpp
src/container/: vector.cpp
src/shm/: CMakeLists.txt  address_space.cpp  error.cpp  mapped_memory.cpp  shared_memory_file.cpp
src/shm/linux/: mapped_memory.cpp  shared_memory_file.cpp
src/shm/unix/: mapped_memory.cpp  mapped_memory.impl.cpp  shared_memory_file.cpp  shared_memory_file.impl.cpp
src/shm/windows/: mapped_memory.cpp  shared_memory_file.cpp
src/sock/: CMakeLists.txt  error.cpp
src/stl/: CMakeLists.txt  vector.cpp
tests/: CMakeLists.txt
tests/shm/: CMakeLists.txt  queue_test.cpp  stack_test.cpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/container/: CMakeLists.txt  vector_test.cpp
tests/unit_tests/data_types/: CMakeLists.txt  vector_test.cpp
tests/unit_tests/publish_subscribe/: CMakeLists.txt  publisher_test.cpp  real_time_service_test.cpp  subscriber_test.cpp
tests/unit_tests/shm/: CMakeLists.txt
tests/unit_tests/shm/unix/: mapped_memory_test.cpp
tests/unit_tests/stl/: CMakeLists.txt  string_test.cpp  vector_test.cpp
